--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,19 @@
   "version": "0.1.1",
 
   "browser_action": {
-    "default_icon": "logo-bw-19px.png",
+    "default_icon": "images/logo-bw-19px.png",
     "default_popup": "popup.html",
     "default_title": "Create a new recipe"
   },
+
   "permissions": [
     "activeTab"
+  ],
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["build/content-bundle.js"]
+    }
   ]
 }
